--- a/Localisation/IT.json
+++ b/Localisation/IT.json
@@ -1,1 +1,115 @@
-{"TranslationsData":{" (elite max)":" (élite massimo)"," (unrestored)":" (non restaurato)"," records":" record"," sec":" sec","...":"...","<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE":"<color=orange>【ATTENZIONE】</color> - DIMENSIONE DEL DOWNLOAD ELEVATA","ABOUT":"INFORMAZIONI","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - Infrastruttura e applicazione di costruzione\nNitro4CSR - Gestione risorse e integrazione dati della comunità\nFREYCKSSON - Aggiornamento risorse\nTheMaintainers - Creazione e aggiornamento dati della comunità\n\nEditore: ムRimgine Entertainment\n\nE-mail: csr2hub.service@gmail.com","AUDIO":"AUDIO","AUTOSHOW":"SALONE DELL'AUTO","AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)":"Modalità <color=#FFD540>PRO</color> del SALONE DELL'AUTO (info tecniche)","Agree":"Accetta","All the best races of the racers are here! Let's see this hall of fame":"Tutte le migliori gare dei piloti sono qui! Scopriamo questa hall of fame!","And finally, click to see additional information about the car":"Infine, clicca per vedere informazioni aggiuntive sull'auto","Avatar":"Avatar","BACK":"INDIETRO","BEST DRIVER!":"MIGLIOR PILOTA!","BEST:":"MIGLIORE:","BOSS CAR":"AUTO DEL BOSS","Basic specs and the car rating of the tier":"Specifiche base e valutazione dell'auto per il livello","Best result and racer. Click to watch the best shift video!":"Miglior risultato e pilota. Clicca per vedere il video del miglior cambio!","Boss time: ":"Tempo del boss: ","CAR INFO (from Vision spreadsheet)":"INFO AUTO (dalla tabella Vision)","CONFIRM CHANGES":"CONFERMA MODIFICHE","CONNECTION FAILED":"CONNESSIONE FALLITA","CREATORS":"CREATORI","CREDITS":"CREDITI","CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download":"CSR<color=yellow>2</color>-HUB deve scaricare dati: <color= #FFAA0D>{0}</color>. Assicurati di non usare una connessione limitata e conferma lo scaricamento.","Car name":"Nome auto","Check out the cost of each part, and the effects of Stage 6 upgrades":"Scopri il costo di ogni parte e gli effetti degli upgrade di Stadio 6!","City camera speed":"Velocità della telecamera in città","Click here to change the leaderboard!":"Clicca qui per cambiare la classifica!","Click to change the car type!":"Clicca per cambiare il tipo di auto!","DYNO:":"BANCO:","Download failed, check your internet connection and restart the app":"Download fallito. Controlla la connessione e riavvia l'app.","Driver":"Pilota","ELITE MAX":"ÉLITE MASSIMO","ELITE STOCK":"ÉLITE BASE","EXIT":"ESCI","Effects volume":"Volume effetti sonori","Enable localisation":"Abilita localizzazione","FAVORITEs":"PREFERITI","FINAL DRIVE":"TRASMISSIONE FINALE","FPS limiter":"Limitatore FPS","Finally we can see the fastest players and their cars. Come with me, I'll show you!":"Finalmente possiamo vedere i giocatori più veloci e le loro auto. Seguimi, ti mostro!","Find out how many elite components you need to fully upgrade your car!":"Scopri quanti componenti élite servono per potenziare al massimo la tua auto!","GRAPHICS":"GRAFICA","Gacha imports":"Importazioni Gacha","Get update!":"Ottieni aggiornamento!","Get updated information on how many Legends components you need to restore your car!":"Ottieni info aggiornate sui componenti Legends necessari per restaurare la tua auto!","Graphics quality":"Qualità grafica","I know it already":"Lo so già","In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again":"Per funzionare correttamente, l'app richiede dati aggiuntivi. Controlla la connessione e riprova.","Initializing database...":"Inizializzazione database...","LOADING SCREEN":"SCHERMATA DI CARICAMENTO","Let's choose the unrestored version":"Scegliamo la versione non restaurata","Let's go!":"Andiamo!","Let's look at LEGENDS":"Diamo un'occhiata alle LEGGENDE","Let's look at this car":"Osserviamo questa auto","MILESTONE SEASON CAR":"AUTO STORICA DELLA STAGIONE","Music clip":"Brano musicale","Music volume":"Volume musica","NEW":"NUOVO","NITROUS OXIDE":"PROTOSSIDO DI AZOTO","Number of upgrades and fusion parts":"Numero di upgrade e parti di fusione","OFF":"SPENTO","ON":"ACCESO","OPEN CONFIGURATOR":"APRI CONFIGURATORE","OTHERS":"ALTRO","Petrol or electric car":"Auto a benzina o elettrica","Preparing the city...":"Preparazione della città...","Price of full car upgrades":"Costo degli upgrade completi","Price of the car:":"Prezzo dell'auto:","Quit":"Esci","RARE IMPORTS":"IMPORTAZIONI RARE","RELEASE iNFO":"INFO RILASCIO","Rarity":"Rarità","Records":"Record","Reset":"Reimposta","Restart":"Riavvia","SEASON CARS":"AUTO DI STAGIONE","SETTINGS":"IMPOSTAZIONI","Save":"Salva","Some settings have been changed, save changes?":"Alcune impostazioni sono state modificate. Salvare?","Start":"Inizia","TIRE PRESSURE":"PRESSIONE GOMME","There's finally an AUTOSHOW in the city, let me show you around?":"Finalmente c'è un SALONE DELL'AUTO in città, vuoi che te lo mostri?","This car can be obtained by defeating the boss":"Questa auto si ottiene sconfiggendo il boss","This car cannot be obtained anywhere":"Questa auto non è disponibile da nessuna parte","This car is a part of a collection and can be purchased with collection credits.":"Questa auto fa parte di una collezione e può essere acquistata con crediti collezione.","This is the AUTOSHOW - information about all the cars are collected here! Let's see":"Questo è il SALONE DELL'AUTO: qui trovi tutte le info sulle auto! Vediamo.","This is the podium, the best cars and drivers show off here":"Questo è il podio, dove si esibiscono le auto e i piloti migliori","This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.":"Questo progetto è stato creato per automatizzare e raccogliere le informazioni di gioco in un unico posto!\n\nQuasi tutte le risorse dell'app appartengono a CSR2 e sono proprietà di NaturalMotion => Zynga => Take-Two Interactive. Sono usate solo per visualizzare informazioni di riferimento per la comunità.","Time":"Tempo","To continue using the application you must agree to the user agreement terms.":"Per continuare a usare l'app, devi accettare i termini di utilizzo.","Total needed:":"Totale necessario:","UNRESTORED":"NON RESTAURATO","UPGRADE DETAILED INFO":"DETTAGLI UPGRADE","Updating the database...":"Aggiornamento database...","Very Low|Low|Medium|High|Very High|Ultra":"Molto basso|Basso|Medio|Alto|Molto alto|Ultra","WELCOME!":"BENVENUTO!","WORLD RECORDS":"RECORD MONDIALI","WR CAR RATING":"VALUTAZIONE AUTO (RECORD)","You can add important cars to favorites":"Puoi aggiungere auto importanti ai preferiti","You can find the car you need by manufacturers or car groups. There is even a favorites section!":"Cerca auto per marca o gruppo. C'è anche una sezione preferiti!","You can go straight to the AUTOSHOW, just click on the car!":"Vai direttamente al SALONE DELL'AUTO cliccando sull'auto!","You can mark the cars you owned":"Segna le auto che possiedi","You can see the best tuning settings here":"Qui trovi le migliori impostazioni di tuning","You can see the visual specs here":"Qui vedi le specifiche visive","You could have won this car in the following seasons:":"Avresti potuto vincere questa auto nelle stagioni:","text coming soon...":"testo in arrivo..."}}
+{
+    "TranslationsData": {
+        " (elite max)": " (élite massimo)",
+        " (unrestored)": " (non restaurato)",
+        " records": " record",
+        " sec": " sec",
+        "...": "...",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ATTENZIONE】</color> - DIMENSIONE DEL DOWNLOAD ELEVATA",
+        "ABOUT": "INFORMAZIONI",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruttura e applicazione di costruzione\nNitro4CSR - Gestione risorse e integrazione dati della comunità\nFREYCKSSON - Aggiornamento risorse\nTheMaintainers - Creazione e aggiornamento dati della comunità\n\nEditore: ムRimgine Entertainment\n\nE-mail: csr2hub.service@gmail.com",
+        "AUDIO": "AUDIO",
+        "AUTOSHOW": "SALONE DELL'AUTO",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Modalità <color=#FFD540>PRO</color> del SALONE DELL'AUTO (info tecniche)",
+        "Agree": "Accetta",
+        "All the best races of the racers are here! Let's see this hall of fame": "Tutte le migliori gare dei piloti sono qui! Scopriamo questa hall of fame!",
+        "And finally, click to see additional information about the car": "Infine, clicca per vedere informazioni aggiuntive sull'auto",
+        "Avatar": "Avatar",
+        "BACK": "INDIETRO",
+        "BEST DRIVER!": "MIGLIOR PILOTA!",
+        "BEST:": "MIGLIORE:",
+        "BOSS CAR": "AUTO DEL BOSS",
+        "Basic specs and the car rating of the tier": "Specifiche base e valutazione dell'auto per il livello",
+        "Best result and racer. Click to watch the best shift video!": "Miglior risultato e pilota. Clicca per vedere il video del miglior cambio!",
+        "Boss time: ": "Tempo del boss: ",
+        "CAR INFO (from Vision spreadsheet)": "INFO AUTO (dalla tabella Vision)",
+        "CONFIRM CHANGES": "CONFERMA MODIFICHE",
+        "CONNECTION FAILED": "CONNESSIONE FALLITA",
+        "CREATORS": "CREATORI",
+        "CREDITS": "CREDITI",
+        "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB deve scaricare dati: <color= #FFAA0D>{0}</color>. Assicurati di non usare una connessione limitata e conferma lo scaricamento.",
+        "Car name": "Nome auto",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Scopri il costo di ogni parte e gli effetti degli upgrade di Stadio 6!",
+        "City camera speed": "Velocità della telecamera in città",
+        "Click here to change the leaderboard!": "Clicca qui per cambiare la classifica!",
+        "Click to change the car type!": "Clicca per cambiare il tipo di auto!",
+        "DYNO:": "BANCO:",
+        "Download failed, check your internet connection and restart the app": "Download fallito. Controlla la connessione e riavvia l'app.",
+        "Driver": "Pilota",
+        "ELITE MAX": "ÉLITE MASSIMO",
+        "ELITE STOCK": "ÉLITE BASE",
+        "EXIT": "ESCI",
+        "Effects volume": "Volume effetti sonori",
+        "Enable localisation": "Abilita localizzazione",
+        "FAVORITEs": "PREFERITI",
+        "FINAL DRIVE": "TRASMISSIONE FINALE",
+        "FPS limiter": "Limitatore FPS",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finalmente possiamo vedere i giocatori più veloci e le loro auto. Seguimi, ti mostro!",
+        "Find out how many elite components you need to fully upgrade your car!": "Scopri quanti componenti élite servono per potenziare al massimo la tua auto!",
+        "GRAPHICS": "GRAFICA",
+        "Gacha imports": "Importazioni Gacha",
+        "Get update!": "Ottieni aggiornamento!",
+        "Get updated information on how many Legends components you need to restore your car!": "Ottieni info aggiornate sui componenti Legends necessari per restaurare la tua auto!",
+        "Graphics quality": "Qualità grafica",
+        "I know it already": "Lo so già",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Per funzionare correttamente, l'app richiede dati aggiuntivi. Controlla la connessione e riprova.",
+        "Initializing database...": "Inizializzazione database...",
+        "LOADING SCREEN": "SCHERMATA DI CARICAMENTO",
+        "Let's choose the unrestored version": "Scegliamo la versione non restaurata",
+        "Let's go!": "Andiamo!",
+        "Let's look at LEGENDS": "Diamo un'occhiata alle LEGGENDE",
+        "Let's look at this car": "Osserviamo questa auto",
+        "MILESTONE SEASON CAR": "AUTO STORICA DELLA STAGIONE",
+        "Music clip": "Brano musicale",
+        "Music volume": "Volume musica",
+        "NEW": "NUOVO",
+        "NITROUS OXIDE": "PROTOSSIDO DI AZOTO",
+        "Number of upgrades and fusion parts": "Numero di upgrade e parti di fusione",
+        "OFF": "SPENTO",
+        "ON": "ACCESO",
+        "OPEN CONFIGURATOR": "APRI CONFIGURATORE",
+        "OTHERS": "ALTRO",
+        "Petrol or electric car": "Auto a benzina o elettrica",
+        "Preparing the city...": "Preparazione della città...",
+        "Price of full car upgrades": "Costo degli upgrade completi",
+        "Price of the car:": "Prezzo dell'auto:",
+        "Quit": "Esci",
+        "RARE IMPORTS": "IMPORTAZIONI RARE",
+        "RELEASE iNFO": "INFO RILASCIO",
+        "Rarity": "Rarità",
+        "Records": "Record",
+        "Reset": "Reimposta",
+        "Restart": "Riavvia",
+        "SEASON CARS": "AUTO DI STAGIONE",
+        "SETTINGS": "IMPOSTAZIONI",
+        "Save": "Salva",
+        "Some settings have been changed, save changes?": "Alcune impostazioni sono state modificate. Salvare?",
+        "Start": "Inizia",
+        "TIRE PRESSURE": "PRESSIONE GOMME",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Finalmente c'è un SALONE DELL'AUTO in città, vuoi che te lo mostri?",
+        "This car can be obtained by defeating the boss": "Questa auto si ottiene sconfiggendo il boss",
+        "This car cannot be obtained anywhere": "Questa auto non è disponibile da nessuna parte",
+        "This car is a part of a collection and can be purchased with collection credits.": "Questa auto fa parte di una collezione e può essere acquistata con crediti collezione.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Questo è il SALONE DELL'AUTO: qui trovi tutte le info sulle auto! Vediamo.",
+        "This is the podium, the best cars and drivers show off here": "Questo è il podio, dove si esibiscono le auto e i piloti migliori",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Questo progetto è stato creato per automatizzare e raccogliere le informazioni di gioco in un unico posto!\n\nQuasi tutte le risorse dell'app appartengono a CSR2 e sono proprietà di NaturalMotion => Zynga => Take-Two Interactive. Sono usate solo per visualizzare informazioni di riferimento per la comunità.",
+        "Time": "Tempo",
+        "To continue using the application, you must agree to the app's terms of use:": "Per continuare a utilizzare l'applicazione, devi accettare i termini di utilizzo dell'app:",
+        "Total needed:": "Totale necessario:",
+        "UNRESTORED": "NON RESTAURATO",
+        "UPGRADE DETAILED INFO": "DETTAGLI UPGRADE",
+        "Updating the database...": "Aggiornamento database...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Molto basso|Basso|Medio|Alto|Molto alto|Ultra",
+        "WELCOME!": "BENVENUTO!",
+        "WORLD RECORDS": "RECORD MONDIALI",
+        "WR CAR RATING": "VALUTAZIONE AUTO (RECORD)",
+        "You can add important cars to favorites": "Puoi aggiungere auto importanti ai preferiti",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Cerca auto per marca o gruppo. C'è anche una sezione preferiti!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "Vai direttamente al SALONE DELL'AUTO cliccando sull'auto!",
+        "You can mark the cars you owned": "Segna le auto che possiedi",
+        "You can see the best tuning settings here": "Qui trovi le migliori impostazioni di tuning",
+        "You can see the visual specs here": "Qui vedi le specifiche visive",
+        "You could have won this car in the following seasons:": "Avresti potuto vincere questa auto nelle stagioni:",
+        "text coming soon...": "testo in arrivo..."
+    }
+}
