--- a/Localisation/PL.json
+++ b/Localisation/PL.json
@@ -94,7 +94,7 @@
         "This is the podium, the best cars and drivers show off here": "To jest podium, gdzie prezentują się najlepsze samochody i kierowcy",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Ten projekt powstał, aby zautomatyzować i zebrać niezbędne informacje do gry w jednym miejscu!\n\nPrawie wszystkie zasoby aplikacji należą do gry CSR2 i są własnością NaturalMotion => Zynga => Take-Two Interactive. Użyte zasoby służą wyłącznie do wyświetlania informacji referencyjnych dla społeczności i nic więcej.",
         "Time": "Czas",
-        "To continue using the application you must agree to the user agreement terms.": "Aby kontynuować korzystanie z aplikacji, musisz zaakceptować warunki umowy użytkownika.",
+        "To continue using the application, you must agree to the app's terms of use:": "Aby kontynuować korzystanie z aplikacji, musisz zaakceptować jej warunki użytkowania:",
         "Total needed:": "Łącznie potrzebne:",
         "UNRESTORED": "NIEODRESTAUROWANY",
         "UPGRADE DETAILED INFO": "SZCZEGÓŁOWE INFORMACJE O ULEPSZENIACH",
