--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -94,7 +94,7 @@
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "Time": "Время",
-        "To continue using the application you must agree to the user agreement terms.": "Чтобы продолжить пользоваться приложением вам нужно принять условия пользовательского соглашения",
+        "To continue using the application, you must agree to the app's terms of use:": "Чтобы продолжить использование приложения, вы должны согласиться с условиями его использования:",
         "Total needed:": "Всего необходимо:",
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
         "UPGRADE DETAILED INFO": "ДЕТАЛЬНАЯ ИНФОРМАЦИЯ ОБ УЛУЧШЕНИЯХ",
