--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -1,1 +1,117 @@
-{"TranslationsData":{" (elite max)":"(elite máx.)"," (unrestored)":" (não restaurado)"," records":" registros"," sec":" seg","...":"...","<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE":"<color=orange>【CUIDADO】</color> - TAMANHO DE DOWNLOAD GRANDE","ABOUT":"SOBRE","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - Aplicativo de infraestrutura e construção\nNitro4CSR - Gerenciamento de recursos e integração de dados da comunidade\nFREYCKSSON - Atualização de recursos\nTheMaintainers - Criação e atualização de dados da comunidade\n\nEditora: ムRimgine Entertainment\n\nE-mail de contato: csr2hub.service@gmail.com","AUDIO":"ÁUDIO","AUTOSHOW":"APRESENTAÇÃO AUTOMÁTICA","AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)":"modo AUTOSHOW <color=#FFD540>PRO</color> (informações técnicas)","Agree":"Concordo","All the best races of the racers are here! Let's see this hall of fame":"Todas as melhores corridas dos pilotos acontecem aqui! Vamos ver este hall da fama.","And finally, click to see additional information about the car":"E, por fim, clique para ver informações adicionais sobre o carro","Avatar":"Avatar","BACK":"VOLTAR","BEST DRIVER!":"MELHOR MOTORISTA!","BEST:":"MELHOR:","BOSS CAR":"CARRO DO CHEFE","Basic specs and the car rating of the tier":"Especificações básicas e classificação do carro no nível","Best result and racer. Click to watch the best shift video!":"Melhor resultado e melhor piloto. Clique para assistir ao melhor vídeo de troca!","Boss time: ":"Hora do chefe: ","CAR INFO (from Vision spreadsheet)":"INFO DO CARRO (visão)","CONFIRM CHANGES":"CONFIRMAR ALTERAÇÕES","CONNECTION FAILED":"CONEXÃO FALHA","CREATORS":"CRIADORES","CREDITS":"CRÉDITOS","CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download":"Para CSR<color=yellow>2</color>-HUB será necessário baixar os dados: <color= #FFAA0D>{0}</color>, certifique-se de que não está usando internet limitada e confirme o download","Car name":"Nome do carro","Check out the cost of each part, and the effects of Stage 6 upgrades":"Confira o custo de cada parte e os efeitos das sextas partes!","City camera speed":"Velocidade da câmera da cidade","Click here to change the leaderboard!":"Clique aqui para alterar a tabela de classificação!","Click to change the car type!":"Clique para alterar o tipo de carro!","DYNO:":"DINÂMICO:","Download failed, check your internet connection and restart the app":"O download falhou, verifique sua conexão com a internet e reinicie o aplicativo","Driver":"Motorista","ELITE MAX":"ELITE MÁXIMA","ELITE STOCK":"AÇÕES DE ELITE","EXIT":"SAÍDA","Effects volume":"Volume de efeitos","Enable localisation":"Habilitar localização","FAVORITEs":"FAVORITOS","FINAL DRIVE":"DISPOSIÇÃO FINAL","FPS limiter":"Limitador de FPS","Finally we can see the fastest players and their cars. Come with me, I'll show you!":"Finalmente podemos ver os jogadores mais rápidos e seus carros. Venha comigo, eu te mostro!","Find out how many elite components you need to fully upgrade your car!":"Descubra quantos componentes de elite você precisa para atualizar completamente seu carro!","GRAPHICS":"GRÁFICOS","Gacha imports":"Importações de Gacha","Get update!":"Obter atualização!","Get updated information on how many Legends components you need to restore your car!":"Obtenha informações atualizadas sobre quantos componentes Legends você precisa para restaurar seu carro!","Graphics quality":"Qualidade gráfica","I know it already":"Eu já sei","In order to ensure appropriate working, the app needs to download additional data, please check your internet connection and try again":"Para o funcionamento correto, é necessário baixar dados adicionais. Verifique sua conexão com a Internet e tente novamente.","Initializing database...":"Inicializando o banco de dados...","LOADING SCREEN":"TELA DE CARREGAMENTO","Let's choose the unrestored version":"Vamos escolher a versão não restaurada","Let's go!":"Vamos lá!","Let's look at LEGENDS":"Vamos dar uma olhada nas LENDAS","Let's look at this car":"Vamos dar uma olhada neste carro","MILESTONE SEASON CAR":"CARRO MARCANTE DA TEMPORADA","Music clip":"Clipe de música","Music volume":"Volume da música","NEW":"NOVO","NITROUS OXIDE":"ÓXIDO NITROSO","Number of upgrades and fusion parts":"Número de atualizações e peças de fusão","OFF":"DESLIGADO","ON":"LIGADO","OPEN CONFIGURATOR":"ABRIR CONFIGURADOR","OTHERS":"OUTROS","Petrol or electric car":"Carro a gasolina ou elétrico","Preparing the city...":"Preparando a cidade...","Price of full car upgrades":"Preço das atualizações completas do carro","Price of the car:":"Preço do carro:","Quit":"Sair","RARE IMPORTS":"IMPORTAÇÕES RARAS","RELEASE iNFO":"LIBERAR iNFO","Rarity":"Raridade","Records":"Registros","Reset":"Reiniciar","Restart":"Reiniciar","SEASON CARS":"CARROS DA TEMPORADA","SETTINGS":"CONFIGURAÇÕES","Save":"Salvar","Some settings have been changed, save changes?":"Algumas configurações foram alteradas, salvar alterações?","Start":"Iniciar","TIRE PRESSURE":"PRESSÃO DOS PNEUS","There's finally an AUTOSHOW in the city, let me show you around?":"Finalmente tem um AUTOSHOW na cidade, deixa eu te mostrar o lugar?","This car can be obtained by defeating the boss":"Este carro pode ser obtido derrotando o chefe","This car cannot be obtained anywhere":"Este carro não pode ser obtido em lugar nenhum","This car is a part of a collection and can be purchased with collection credits.":"Este carro faz parte de uma coleção e pode ser comprado com créditos de coleção.","This is the AUTOSHOW - information about all the cars are collected here! Let's see":"Este é o AUTOSHOW - informações sobre todos os carros estão reunidas aqui! Vamos ver","This is the podium, the best cars and drivers show off here":"Este é o pódio, os melhores carros e pilotos se apresentam aqui","This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.":"Este projeto foi criado para automatizar e reunir as informações necessárias para o jogo em um só lugar!\n\nQuase todos os recursos do aplicativo pertencem ao jogo CSR2 e são propriedades da NaturalMotion => Zynga => Take-Two Interactive. Os recursos utilizados servem apenas para exibir informações de referência para a comunidade e nada mais.","Time":"Tempo","To continue using the application you must agree to the user agreement terms.":"Para continuar usando o aplicativo, você deve concordar com os termos do contrato do usuário","Total needed:":"Total necessário:","UNRESTORED":"NÃO RESTAURADO","UPGRADE DETAILED INFO":"ATUALIZAR INFORMAÇÕES DETALHADAS","Updating the database...":"Atualizando o banco de dados...","Very Low|Low|Medium|High|Very High|Ultra":"Muito baixo|Baixo|Médio|Alto|Muito alto|Ultra","WELCOME!":"BEM-VINDO!","WORLD RECORDS":"RECORDES MUNDIAIS","WR CAR RATING":"CLASSIFICAÇÃO DE CARROS WR","You can add important cars to favorites":"Você pode adicionar carros importantes aos favoritos","You can find the car you need by manufacturers or car groups. There is even a favorites section!":"Você pode encontrar o carro que precisa por fabricantes ou grupos de carros. Há até uma seção de favoritos!","You can go straight to the AUTOSHOW, just click on the car!":"Você pode ir direto para o AUTOSHOW, basta clicar no carro!","You can mark the cars you owned":"Você pode marcar os carros que você teve","You can see the best tuning settings here":"Aqui você pode ver as melhores configurações de ajuste","You can see the visual specs here":"Você pode ver as especificações visuais aqui","You could have won this car in the following seasons:":"Este carro poderia ter ganhado o campeonato de equipes. Nas seguintes temporadas:","text coming soon...":"texto em breve...","In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again":"In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com"}}
+{
+    "TranslationsData": {
+        " (elite max)": "(elite máx.)",
+        " (unrestored)": " (não restaurado)",
+        " records": " registros",
+        " sec": " seg",
+        "...": "...",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CUIDADO】</color> - TAMANHO DE DOWNLOAD GRANDE",
+        "ABOUT": "SOBRE",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration of community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Aplicativo de infraestrutura e construção\nNitro4CSR - Gerenciamento de recursos e integração de dados da comunidade\nFREYCKSSON - Atualização de recursos\nTheMaintainers - Criação e atualização de dados da comunidade\n\nEditora: ムRimgine Entertainment\n\nE-mail de contato: csr2hub.service@gmail.com",
+        "AUDIO": "ÁUDIO",
+        "AUTOSHOW": "APRESENTAÇÃO AUTOMÁTICA",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "modo AUTOSHOW <color=#FFD540>PRO</color> (informações técnicas)",
+        "Agree": "Concordo",
+        "All the best races of the racers are here! Let's see this hall of fame": "Todas as melhores corridas dos pilotos acontecem aqui! Vamos ver este hall da fama.",
+        "And finally, click to see additional information about the car": "E, por fim, clique para ver informações adicionais sobre o carro",
+        "Avatar": "Avatar",
+        "BACK": "VOLTAR",
+        "BEST DRIVER!": "MELHOR MOTORISTA!",
+        "BEST:": "MELHOR:",
+        "BOSS CAR": "CARRO DO CHEFE",
+        "Basic specs and the car rating of the tier": "Especificações básicas e classificação do carro no nível",
+        "Best result and racer. Click to watch the best shift video!": "Melhor resultado e melhor piloto. Clique para assistir ao melhor vídeo de troca!",
+        "Boss time: ": "Hora do chefe: ",
+        "CAR INFO (from Vision spreadsheet)": "INFO DO CARRO (visão)",
+        "CONFIRM CHANGES": "CONFIRMAR ALTERAÇÕES",
+        "CONNECTION FAILED": "CONEXÃO FALHA",
+        "CREATORS": "CRIADORES",
+        "CREDITS": "CRÉDITOS",
+        "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "Para CSR<color=yellow>2</color>-HUB será necessário baixar os dados: <color= #FFAA0D>{0}</color>, certifique-se de que não está usando internet limitada e confirme o download",
+        "Car name": "Nome do carro",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Confira o custo de cada parte e os efeitos das sextas partes!",
+        "City camera speed": "Velocidade da câmera da cidade",
+        "Click here to change the leaderboard!": "Clique aqui para alterar a tabela de classificação!",
+        "Click to change the car type!": "Clique para alterar o tipo de carro!",
+        "DYNO:": "DINÂMICO:",
+        "Download failed, check your internet connection and restart the app": "O download falhou, verifique sua conexão com a internet e reinicie o aplicativo",
+        "Driver": "Motorista",
+        "ELITE MAX": "ELITE MÁXIMA",
+        "ELITE STOCK": "AÇÕES DE ELITE",
+        "EXIT": "SAÍDA",
+        "Effects volume": "Volume de efeitos",
+        "Enable localisation": "Habilitar localização",
+        "FAVORITEs": "FAVORITOS",
+        "FINAL DRIVE": "DISPOSIÇÃO FINAL",
+        "FPS limiter": "Limitador de FPS",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finalmente podemos ver os jogadores mais rápidos e seus carros. Venha comigo, eu te mostro!",
+        "Find out how many elite components you need to fully upgrade your car!": "Descubra quantos componentes de elite você precisa para atualizar completamente seu carro!",
+        "GRAPHICS": "GRÁFICOS",
+        "Gacha imports": "Importações de Gacha",
+        "Get update!": "Obter atualização!",
+        "Get updated information on how many Legends components you need to restore your car!": "Obtenha informações atualizadas sobre quantos componentes Legends você precisa para restaurar seu carro!",
+        "Graphics quality": "Qualidade gráfica",
+        "I know it already": "Eu já sei",
+        "In order to ensure appropriate working, the app needs to download additional data, please check your internet connection and try again": "Para o funcionamento correto, é necessário baixar dados adicionais. Verifique sua conexão com a Internet e tente novamente.",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again",
+        "Initializing database...": "Inicializando o banco de dados...",
+        "LOADING SCREEN": "TELA DE CARREGAMENTO",
+        "Let's choose the unrestored version": "Vamos escolher a versão não restaurada",
+        "Let's go!": "Vamos lá!",
+        "Let's look at LEGENDS": "Vamos dar uma olhada nas LENDAS",
+        "Let's look at this car": "Vamos dar uma olhada neste carro",
+        "MILESTONE SEASON CAR": "CARRO MARCANTE DA TEMPORADA",
+        "Music clip": "Clipe de música",
+        "Music volume": "Volume da música",
+        "NEW": "NOVO",
+        "NITROUS OXIDE": "ÓXIDO NITROSO",
+        "Number of upgrades and fusion parts": "Número de atualizações e peças de fusão",
+        "OFF": "DESLIGADO",
+        "ON": "LIGADO",
+        "OPEN CONFIGURATOR": "ABRIR CONFIGURADOR",
+        "OTHERS": "OUTROS",
+        "Petrol or electric car": "Carro a gasolina ou elétrico",
+        "Preparing the city...": "Preparando a cidade...",
+        "Price of full car upgrades": "Preço das atualizações completas do carro",
+        "Price of the car:": "Preço do carro:",
+        "Quit": "Sair",
+        "RARE IMPORTS": "IMPORTAÇÕES RARAS",
+        "RELEASE iNFO": "LIBERAR iNFO",
+        "Rarity": "Raridade",
+        "Records": "Registros",
+        "Reset": "Reiniciar",
+        "Restart": "Reiniciar",
+        "SEASON CARS": "CARROS DA TEMPORADA",
+        "SETTINGS": "CONFIGURAÇÕES",
+        "Save": "Salvar",
+        "Some settings have been changed, save changes?": "Algumas configurações foram alteradas, salvar alterações?",
+        "Start": "Iniciar",
+        "TIRE PRESSURE": "PRESSÃO DOS PNEUS",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Finalmente tem um AUTOSHOW na cidade, deixa eu te mostrar o lugar?",
+        "This car can be obtained by defeating the boss": "Este carro pode ser obtido derrotando o chefe",
+        "This car cannot be obtained anywhere": "Este carro não pode ser obtido em lugar nenhum",
+        "This car is a part of a collection and can be purchased with collection credits.": "Este carro faz parte de uma coleção e pode ser comprado com créditos de coleção.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Este é o AUTOSHOW - informações sobre todos os carros estão reunidas aqui! Vamos ver",
+        "This is the podium, the best cars and drivers show off here": "Este é o pódio, os melhores carros e pilotos se apresentam aqui",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Este projeto foi criado para automatizar e reunir as informações necessárias para o jogo em um só lugar!\n\nQuase todos os recursos do aplicativo pertencem ao jogo CSR2 e são propriedades da NaturalMotion => Zynga => Take-Two Interactive. Os recursos utilizados servem apenas para exibir informações de referência para a comunidade e nada mais.",
+        "Time": "Tempo",
+        "To continue using the application, you must agree to the app's terms of use:": "Para continuar usando o aplicativo, você deve concordar com os termos de uso do aplicativo:",
+        "Total needed:": "Total necessário:",
+        "UNRESTORED": "NÃO RESTAURADO",
+        "UPGRADE DETAILED INFO": "ATUALIZAR INFORMAÇÕES DETALHADAS",
+        "Updating the database...": "Atualizando o banco de dados...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Muito baixo|Baixo|Médio|Alto|Muito alto|Ultra",
+        "WELCOME!": "BEM-VINDO!",
+        "WORLD RECORDS": "RECORDES MUNDIAIS",
+        "WR CAR RATING": "CLASSIFICAÇÃO DE CARROS WR",
+        "You can add important cars to favorites": "Você pode adicionar carros importantes aos favoritos",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Você pode encontrar o carro que precisa por fabricantes ou grupos de carros. Há até uma seção de favoritos!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "Você pode ir direto para o AUTOSHOW, basta clicar no carro!",
+        "You can mark the cars you owned": "Você pode marcar os carros que você teve",
+        "You can see the best tuning settings here": "Aqui você pode ver as melhores configurações de ajuste",
+        "You can see the visual specs here": "Você pode ver as especificações visuais aqui",
+        "You could have won this car in the following seasons:": "Este carro poderia ter ganhado o campeonato de equipes. Nas seguintes temporadas:",
+        "text coming soon...": "texto em breve..."
+    }
+}
