--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -1,1 +1,115 @@
-{"TranslationsData":{" (elite max)":" (精英满级)"," (unrestored)":" (未修复)"," records":" 纪录"," sec":" 秒","...":"...","<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE":"<color=orange>【注意】</color> -    下载量大","ABOUT":"关于","ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com":"ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com","AUDIO":"音响","AUTOSHOW":"车展","AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)":"车展 <color=#FFD540>PRO</color> 模式  (technical info)","Agree":"Agree","All the best races of the racers are here! Let's see this hall of fame":"车手们的最佳赛事都在这里! 让我们看看这个名人堂","And finally, click to see additional information about the car":"最后，点击查看车辆的额外资讯","Avatar":"头像","BACK":"返回","BEST DRIVER!":"最佳车手!","BEST:":"最佳:","BOSS CAR":"领袖车辆","Basic specs and the car rating of the tier":"等级内的车辆基本规格和积分","Best result and racer. Click to watch the best shift video!":"最佳成绩与车手。点击观看最佳换挡的视频!","Boss time: ":"领袖时间: ","CAR INFO (from Vision spreadsheet)":"车辆资讯 (自 Vision 资料库)","CONFIRM CHANGES":"确认更改","CONNECTION FAILED":"连线失败","CREATORS":"创建者","CREDITS":"特别鸣谢","CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download":"CSR<color=yellow>2</color>-HUB 需要下载数据: <color= #FFAA0D>{0}</color>, 请确认不是使用受限网络后确认下载程序","Car name":"车名","Check out the cost of each part, and the effects of Stage 6 upgrades":"检查各个零件的价格，以及第六级升级的作用！","City camera speed":"城市摄像机的速度","Click here to change the leaderboard!":"点击这里更换排行榜！","Click to change the car type!":"点击更换车种！","DYNO:":"测功机:","Download failed, check your internet connection and restart the app":"下载失败，检查网络连接后重启应用","Driver":"车手","ELITE MAX":"精英满级","ELITE STOCK":"精英原厂","EXIT":"离开","Effects volume":"音效声量","Enable localisation":"Enable localisation","FAVORITEs":"最爱","FINAL DRIVE":"最终传动","FPS limiter":"FPS limiter","Finally we can see the fastest players and their cars. Come with me, I'll show you!":"我们终于可以查看最快玩家和他们的车辆。跟我来，我给你看看!","Find out how many elite components you need to fully upgrade your car!":"查看升满车辆需要多少精英元件!","GRAPHICS":"GRAPHICS","Gacha imports":"抽奖进口","Get update!":"获取更新！","Get updated information on how many Legends components you need to restore your car!":"获取和修复传奇车辆所需的元件数量有关的最新消息!","Graphics quality":"Graphics quality","I know it already":"我已知晓","In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again":"为了确保正确运行需下载额外数据，请检查网络连接后重试","Initializing database...":"正在初始化数据库...","LOADING SCREEN":"加载屏幕","Let's choose the unrestored version":"我们来选择未修复的版本","Let's go!":"我们出发!","Let's look at LEGENDS":"我们来看看传奇","Let's look at this car":"我们来看看这辆车","MILESTONE SEASON CAR":"赛季里程碑车辆","Music clip":"音乐曲子","Music volume":"音乐声量","NEW":"新","NITROUS OXIDE":"氮气加速","Number of upgrades and fusion parts":"升级及合成零件的数量","OFF":"关闭","ON":"开启","OPEN CONFIGURATOR":"开启配置器","OTHERS":"其他","Petrol or electric car":"汽油或电动车","Preparing the city...":"正在准备城市中...","Price of full car upgrades":"满级的价格","Price of the car:":"车辆的价格:","Quit":"退出","RARE IMPORTS":"稀有进口","RELEASE iNFO":"推出资讯","Rarity":"稀有度","Records":"纪录","Reset":"重置","Restart":"重启","SEASON CARS":"赛季车辆","SETTINGS":"设置","Save":"保存","Some settings have been changed, save changes?":"一些设置已被更改，是否保存更改？","Start":"开始","TIRE PRESSURE":"轮胎气压","There's finally an AUTOSHOW in the city, let me show you around?":"城市里终于有个车展了，要不要我带你看看？","This car can be obtained by defeating the boss":"这辆车可通过击败领袖获取","This car cannot be obtained anywhere":"这辆车无法获取","This car is a part of a collection and can be purchased with collection credits.":"这辆车属于某个收藏的一部分，且可透过收藏积分购买","This is the AUTOSHOW - information about all the cars are collected here! Let's see":"这是个车展 - 这里收着所有车辆的资讯! 我们来看看","This is the podium, the best cars and drivers show off here":"这里是颁奖台，最佳的车辆和车手都展示在这里","This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.":"这个计划是为了自动化和整顿整个游戏的必要资讯到一个集中点开发的!\n\n几乎所有应用的资源皆为 CSR2 所属，且是 NaturalMotion => Zynga => Take-Two Interactive 的财产。所使用的资源只用于给社群提供参考资讯，无其他用途。","Time":"时间","To continue using the application you must agree to the user agreement terms.":"To continue using the application you must agree to the terms the user agreement","Total needed:":"总需:","UNRESTORED":"未修复","UPGRADE DETAILED INFO":"升级详细资讯","Updating the database...":"正在更新数据库...","Very Low|Low|Medium|High|Very High|Ultra":"Very Low|Low|Medium|High|Very High|Ultra","WELCOME!":"WELCOME!","WORLD RECORDS":"世界纪录","WR CAR RATING":"世界纪录的车辆积分","You can add important cars to favorites":"你可以把重要的车辆加入最爱里","You can find the car you need by manufacturers or car groups. There is even a favorites section!":"你可以区分厂家或车种查寻车辆。甚至还有最爱的选项!","You can go straight to the AUTOSHOW, just click on the car!":"你可以直接前往车展，只需点击车辆!","You can mark the cars you owned":"你可以标记已拥有的车辆","You can see the best tuning settings here":"你可以在这里查看最佳调节","You can see the visual specs here":"你可以在这里查看外观规格","You could have won this car in the following seasons:":"这辆车可以在以下赛季里赢取:","text coming soon...":"即将来临..."}}
+{
+    "TranslationsData": {
+        " (elite max)": " (精英满级)",
+        " (unrestored)": " (未修复)",
+        " records": " 纪录",
+        " sec": " 秒",
+        "...": "...",
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下载量大",
+        "ABOUT": "关于",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "AUDIO": "音响",
+        "AUTOSHOW": "车展",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "车展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "Agree": "Agree",
+        "All the best races of the racers are here! Let's see this hall of fame": "车手们的最佳赛事都在这里! 让我们看看这个名人堂",
+        "And finally, click to see additional information about the car": "最后，点击查看车辆的额外资讯",
+        "Avatar": "头像",
+        "BACK": "返回",
+        "BEST DRIVER!": "最佳车手!",
+        "BEST:": "最佳:",
+        "BOSS CAR": "领袖车辆",
+        "Basic specs and the car rating of the tier": "等级内的车辆基本规格和积分",
+        "Best result and racer. Click to watch the best shift video!": "最佳成绩与车手。点击观看最佳换挡的视频!",
+        "Boss time: ": "领袖时间: ",
+        "CAR INFO (from Vision spreadsheet)": "车辆资讯 (自 Vision 资料库)",
+        "CONFIRM CHANGES": "确认更改",
+        "CONNECTION FAILED": "连线失败",
+        "CREATORS": "创建者",
+        "CREDITS": "特别鸣谢",
+        "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下载数据: <color= #FFAA0D>{0}</color>, 请确认不是使用受限网络后确认下载程序",
+        "Car name": "车名",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "检查各个零件的价格，以及第六级升级的作用！",
+        "City camera speed": "城市摄像机的速度",
+        "Click here to change the leaderboard!": "点击这里更换排行榜！",
+        "Click to change the car type!": "点击更换车种！",
+        "DYNO:": "测功机:",
+        "Download failed, check your internet connection and restart the app": "下载失败，检查网络连接后重启应用",
+        "Driver": "车手",
+        "ELITE MAX": "精英满级",
+        "ELITE STOCK": "精英原厂",
+        "EXIT": "离开",
+        "Effects volume": "音效声量",
+        "Enable localisation": "Enable localisation",
+        "FAVORITEs": "最爱",
+        "FINAL DRIVE": "最终传动",
+        "FPS limiter": "FPS limiter",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我们终于可以查看最快玩家和他们的车辆。跟我来，我给你看看!",
+        "Find out how many elite components you need to fully upgrade your car!": "查看升满车辆需要多少精英元件!",
+        "GRAPHICS": "GRAPHICS",
+        "Gacha imports": "抽奖进口",
+        "Get update!": "获取更新！",
+        "Get updated information on how many Legends components you need to restore your car!": "获取和修复传奇车辆所需的元件数量有关的最新消息!",
+        "Graphics quality": "Graphics quality",
+        "I know it already": "我已知晓",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "为了确保正确运行需下载额外数据，请检查网络连接后重试",
+        "Initializing database...": "正在初始化数据库...",
+        "LOADING SCREEN": "加载屏幕",
+        "Let's choose the unrestored version": "我们来选择未修复的版本",
+        "Let's go!": "我们出发!",
+        "Let's look at LEGENDS": "我们来看看传奇",
+        "Let's look at this car": "我们来看看这辆车",
+        "MILESTONE SEASON CAR": "赛季里程碑车辆",
+        "Music clip": "音乐曲子",
+        "Music volume": "音乐声量",
+        "NEW": "新",
+        "NITROUS OXIDE": "氮气加速",
+        "Number of upgrades and fusion parts": "升级及合成零件的数量",
+        "OFF": "关闭",
+        "ON": "开启",
+        "OPEN CONFIGURATOR": "开启配置器",
+        "OTHERS": "其他",
+        "Petrol or electric car": "汽油或电动车",
+        "Preparing the city...": "正在准备城市中...",
+        "Price of full car upgrades": "满级的价格",
+        "Price of the car:": "车辆的价格:",
+        "Quit": "退出",
+        "RARE IMPORTS": "稀有进口",
+        "RELEASE iNFO": "推出资讯",
+        "Rarity": "稀有度",
+        "Records": "纪录",
+        "Reset": "重置",
+        "Restart": "重启",
+        "SEASON CARS": "赛季车辆",
+        "SETTINGS": "设置",
+        "Save": "保存",
+        "Some settings have been changed, save changes?": "一些设置已被更改，是否保存更改？",
+        "Start": "开始",
+        "TIRE PRESSURE": "轮胎气压",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "城市里终于有个车展了，要不要我带你看看？",
+        "This car can be obtained by defeating the boss": "这辆车可通过击败领袖获取",
+        "This car cannot be obtained anywhere": "这辆车无法获取",
+        "This car is a part of a collection and can be purchased with collection credits.": "这辆车属于某个收藏的一部分，且可透过收藏积分购买",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "这是个车展 - 这里收着所有车辆的资讯! 我们来看看",
+        "This is the podium, the best cars and drivers show off here": "这里是颁奖台，最佳的车辆和车手都展示在这里",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "这个计划是为了自动化和整顿整个游戏的必要资讯到一个集中点开发的!\n\n几乎所有应用的资源皆为 CSR2 所属，且是 NaturalMotion => Zynga => Take-Two Interactive 的财产。所使用的资源只用于给社群提供参考资讯，无其他用途。",
+        "Time": "时间",
+        "To continue using the application, you must agree to the app's terms of use:": "要继续使用该应用程序，您必须同意该应用的使用条款：",
+        "Total needed:": "总需:",
+        "UNRESTORED": "未修复",
+        "UPGRADE DETAILED INFO": "升级详细资讯",
+        "Updating the database...": "正在更新数据库...",
+        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "WELCOME!": "WELCOME!",
+        "WORLD RECORDS": "世界纪录",
+        "WR CAR RATING": "世界纪录的车辆积分",
+        "You can add important cars to favorites": "你可以把重要的车辆加入最爱里",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "你可以区分厂家或车种查寻车辆。甚至还有最爱的选项!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "你可以直接前往车展，只需点击车辆!",
+        "You can mark the cars you owned": "你可以标记已拥有的车辆",
+        "You can see the best tuning settings here": "你可以在这里查看最佳调节",
+        "You can see the visual specs here": "你可以在这里查看外观规格",
+        "You could have won this car in the following seasons:": "这辆车可以在以下赛季里赢取:",
+        "text coming soon...": "即将来临..."
+    }
+}
