--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -17,7 +17,7 @@
         "Avatar": "Аватар",
         "BACK": "НАЗАД",
         "BEST DRIVER!": "ЛУЧШИЙ ГОНЩИК!",
-        "BEST:": "ЛУЧШИЙ:",
+        "BEST:": "РЕКОРД:",
         "BOSS CAR": "МАШИНА БОССА",
         "Basic specs and the car rating of the tier": "Основные характеристики и рейтинг автомобиля на его этапе",
         "Best result and racer. Click to watch the best shift video!": "Лучший гонщик и результат. Нажми, чтобы посмотреть шифт-видео!",
